# EVA-Plus

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
eva/common/: reduction_balancer.h
eva/ir/: CMakeLists.txt  arithmetic.h
eva/seal/: seal.cpp  seal.h
